admin/css/global_styles.css
/* Debugging Styles */
.debug-box {
  background-color: green;
}

@media (min-width: 768px) {
  .debug-box {
    background-color: yellow;
  }
}

@media (min-width: 1024px) {
  .debug-box {
    background-color: red;
  }
}

/* big ass desktop view */
@media (min-width: 1444px) {
  .debug-box {
    background-color: purple;
  }
}

/* General Styles */
/* Add this block at the very beginning of your CSS */
*,
*::before,
*::after {
  box-sizing: border-box;
}
html,
body {
  height: 100% !important;
}

body {
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
  background-color: #161620;
  color: #ffffff;
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
}

h2 {
  margin: 0;
}

/* Navbar Styles */
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 60%;
  height: 100% !important;
  background-color: #29292f;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 20px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  display: none;
}
.nav-top-content {
  margin-top: 60px;
  height: auto;
}
.nav-bottom-content {
  height: 50%;
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}
.profile-photo {
  height: 80px;
  width: 80px;
  border-radius: 50%;
  background-color: grey;
}
.navbar-bottom-text {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.navbar h1 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: 500;
  color: #ffffff;
}
.burger {
  position: fixed;
  top: 0;
  left: 0;
  margin-left: 20px;
  margin-top: 30px;
  z-index: 10000;
}
.navOpen {
  display: block;
}
.navClosed {
  display: none;
}
/* Tabs Navigation Styles */
.tabs {
  display: flex;
  flex-direction: column;
  gap: 15px;
  margin-left: auto;
}
.tab-button:first-child {
  margin-top: 10px;
}
.tab-button {
  background: none;
  border: none;
  color: #8e8e8e;
  font-size: 1rem;
  text-align: left;
  padding: 10px;
  cursor: pointer;
  transition: background-color 0.3s;
  padding-left: 0;
}

.tab-button:hover {
  background-color: #404040;
}

.tab-button.selected {
  color: #ffffff;
}

/* Content Area */
.content {
  padding: 20px;
  width: 100%;
  margin-top: 40px;
}

.tab-content {
  display: none;
}

.tab-content.active {
  display: block;
}

@media (min-width: 992px) {
  html {
    height: 100%;
  }

  body {
    height: 100%;
    flex-direction: row;
    justify-content: space-between;
    margin: 0;
  }
  .burger{
    display: none;
  }

  .navbar {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 25%;
    height: 100vh !important; /* Make navbar take the full height of the viewport */
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    padding: 20px;
    position: fixed; /* Make navbar fixed in place */
    top: 0; /* Start at the top of the viewport */
    left: 0; /* Stick to the left side */
  }

  .navbar h1 {
    margin-bottom: 10px;
  }

  .tabs {
    flex-direction: column;
    width: 100%;
    margin-top: 20px;
  }
  .nav-top-content {
    margin-top:0;
    height: auto;
    width: 100%;
  }
  .nav-bottom-content {
    height: auto;
    width: 100%;
  }
  .content {
    margin-left: 25%;
    width: 75%;
    margin-top: 0;
    height: auto;
  }
}

